--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Стикеры</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <title>Стикеры</title>
 </head>
 <body>
-    <script src="script.js"></script>
+  <main>
+    <div class="header">
+      <div class="title">
+        <i class="fa-regular fa-note-sticky"></i>
+        <h1 class="logo">Стикеры</h1>
+      </div>
+      <button class="add_stick">Добавить стикер</button>
+    </div>
+    <div class="container">
+      <div class="text"> 
+        <textarea class="textarea" name="text" id="textarea" cols="30" rows="10"></textarea>
+        <i class="fa-regular fa-circle-xmark"></i>
+        </div>
+        <div class="item">
+          <h1 class="content"></h1>
+        </div>
+     <template id="template">
+     </template>
+    </div>
+  </main>
+  <script src="script.js"></script>
 </body>
 </html>
